syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "EnumStringMetricStateProto";

import "sdc/biceps/stringmetricstate.proto";

message EnumStringMetricStateMsg {
  StringMetricStateMsg string_metric_state = 1;
}
