syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "RealTimeSampleArrayMetricStateProto";

import "sdc/biceps/abstractmetricstate.proto";
import "sdc/biceps/samplearrayvalue.proto";
import "sdc/biceps/range.proto";

message RealTimeSampleArrayMetricStateMsg {
  AbstractMetricStateMsg abstract_metric_state = 1;
  SampleArrayValueMsg metric_value = 2;
  repeated RangeMsg physiological_range = 3;
}
