syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "StringMetricDescriptorProto";

import "sdc/biceps/abstractmetricdescriptor.proto";

message StringMetricDescriptorMsg {
  AbstractMetricDescriptorMsg abstract_metric_descriptor = 1;
}
